# typerd-refactor

./: .editorconfig  .gitignore  Cargo.toml  Makefile  README.md  language.design
src/: input.rs  lib.rs  main.rs  position.rs
src/ast/: exprs.rs  mod.rs  prefixes.rs  stmts.rs  traits.rs  types.rs  vars.rs
src/parser/: mod.rs  parsers.rs  state.rs  types.rs  utils.rs
src/parser/tests/: mod.rs  types.rs
src/tokenizer/: mod.rs  tests.rs
src/tokens/: mod.rs  types.rs
typerd/: Cargo.toml
typerd-ast/: Cargo.toml
typerd-ast/src/: lib.rs  tokens.rs  visitors.rs
typerd-ast/src/ast/: exprs.rs  exprs_prefix.rs  exprs_var.rs  mod.rs  operator.rs  stmts.rs  traits.rs  types.rs
typerd-checker/: Cargo.toml
typerd-checker/src/: analyzer.rs  config.rs  diagnostics.rs  lib.rs  module.rs  scope.rs  types.rs
typerd-parser/: Cargo.toml
typerd-parser/src/: input.rs  lib.rs  prelude.rs
typerd-parser/src/parser/: mod.rs  parsers.rs  state.rs  types.rs  utils.rs
typerd-parser/src/parser/tests/: binder.ty  mod.rs  types.rs
typerd-parser/src/tokenizer/: mod.rs  tests.rs
typerd/src/: main.rs
